--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 application.origins=https://localhost:3000,http://localhost:3000
 
-# MySQL
+# PostgreSQL
 spring.datasource.url= jdbc:postgresql://localhost:5432/apm
 spring.datasource.username=postgres
 spring.datasource.password=971557
@@ -16,5 +16,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 # logging
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) %cyan(%logger{36}) - %msg%n
 logging.level.org.hibernate.SQL=debug
+
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=*
+spring.mail.password=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
