Improvements and Bugfix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-application.origins=https://localhost:3000,http://localhost:3000
+application.origins=*
 
 # PostgreSQL
-spring.datasource.url= jdbc:postgresql://localhost:5432/apm
-spring.datasource.username=postgres
-spring.datasource.password=971557
+spring.datasource.url= *
+spring.datasource.username=*
+spring.datasource.password=*
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -18,9 +18,9 @@ spring.jpa.open-in-view=false
 # logging
 logging.level.org.hibernate.SQL=debug
 
-# Email
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+# Email - config
+spring.mail.host=*
+spring.mail.port=*
 spring.mail.username=*
 spring.mail.password=*
 spring.mail.properties.mail.smtp.auth=true
